--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container" id="home">
     <header>My name is<span class="name">Naima Salim</span> <br>and I am a Software<br> Developer.</header>
     <div class="link">
-        <a href="https://docs.google.com/document/d/1NwC8KY04QEWCIrMAhQOvxMfv7q8atNb2zN4GPVENAqc/edit" style="text-decoration: none; color: #CE49BF;">Resume</a>
+        <a href="https://docs.google.com/document/d/1r3-PRNEW92V5K5Jq5e0PzEWagv8t2dFXVA671k2rNLk/edit" style="text-decoration: none; color: #CE49BF;">Resume</a>
        </div>
     <div class="square"></div>
     <div class="image">
@@ -51,25 +51,19 @@
         affect her community; she believes that with her background 
         in software development and her desire to give back to her community she is in a position to use technology to address inequalities in health care.
 </p>
-<div class="icon1">
-    <i class="fa fa-circle" style="font-size: 400px;"></i>
-</div>
-<div class="icon2">
-    <i class="fa fa-circle" style="font-size: 300px;"></i>
-</div>
 </div>
 
 <div class="container-3" id="projects">
     <h2>My Projects</h2>
     <div class="links">
     <div class="github">
-        <a href="https://github.com/Naima-Salim?tab=repositories" style="text-decoration: none; color: #CE49BF;">See Github</a>
+        <a href="https://github.com/Naima-Salim?tab=repositories" style="text-decoration: none; color: #CE49BF;">Github</a>
        </div>
        <div class="netlify">
-        <a href="https://app.netlify.com/teams/mima-yusuf/overview" style="text-decoration: none; color: #CE49BF;">See Netlify</a>
+        <a href="https://app.netlify.com/teams/mima-yusuf/overview" style="text-decoration: none; color: #CE49BF;">Netlify</a>
        </div>
        <div class="figma">
-        <a href="https://www.figma.com/files/recent?fuid=1076536165745568952" style="text-decoration: none; color: #CE49BF;">See Figma</a>
+        <a href="https://www.figma.com/files/recent?fuid=1076536165745568952" style="text-decoration: none; color: #CE49BF;">Figma</a>
        </div>
        <div class="linkedin">
         <a href="https://www.linkedin.com/in/naima-salim-196a54231/" style="text-decoration: none; color: #CE49BF;">Linkedin</a>
@@ -235,10 +229,12 @@
     </div>
 </div>
 
-<footer>
-<ul id="contact">Contact Info: <br><span class="cont">+254769523085</span> <br><span class="cont">+254113247436</span></ul>
-<ul id="email">Email <br><span class="cont2">naimaayusuff@gmail.com</span></ul>
-</footer>
+ <footer> 
+        <ul id="contact">Contact Info: <br><span class="cont">+254769523085</span> <br><span class="cont">+254113247436</span></ul>
+        <ul id="email">Email <br><span class="cont2">naimaayusuff@gmail.com</span></ul>
+        <a href="https://www.figma.com/files/recent?fuid=1076536165745568952" style="text-decoration: none; width: 150%;">
+        <button id="design">see figma designs</button></a>
+        </footer>
 
 <script src="index.js"></script>
 
