--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#about-me">About</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
@@ -146,8 +146,13 @@
             </div>
         </div>
     
-        <div class="container-3">
+        <div class="container-3" id="projects">
             <h5>My Projects</h5>
+
+            <div class="Figma">
+                <a href="https://www.figma.com/files/drafts?fuid=1076536165745568952" 
+                style="text-decoration: none; background-color: #ff7200; color: #fff; border: none; border-radius: 10px; padding: 1.4% 3% 1.8% 3%;">See all Designs</a>
+            </div>
 
             <div class="project_img">
                 <img src="Bus Booking App design.png" width="500px" style="border-radius: 20px;  border: solid 20px #e96704; margin-top: 5%; margin-left: 5%;">      
@@ -162,10 +167,9 @@
             </div> 
 
             <div class="project_img4">
-                <img src="Afya juice redesign.png" width="500px" style="border-radius: 20px;  border: solid 20px #e96704; margin-left: 5%; margin-top: -35%;">
+                <img src="Registration Form.png" width="500px" style="border-radius: 20px;  border: solid 20px #e96704; margin-left: 5%; margin-top: -75%;">
             </div>  
         </div>
   
-     
 </body>
 </html>
