--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -149,8 +149,8 @@
         <div class="container-3" id="projects">
             <h5>My Projects</h5>
 
-            <div class="Figma">
-                <a href="https://www.figma.com/files/drafts?fuid=1076536165745568952" 
+            <div class="Behance">
+                <a href="https://www.behance.net/naimasalim" 
                 style="text-decoration: none; background-color: #ff7200; color: #fff; border: none; border-radius: 10px; padding: 1.4% 3% 1.8% 3%;">See all Designs</a>
             </div>
 
